<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="wrap_content"
	android:orientation="vertical">
	<!--
    /*
     *	This content is generated from the API File Info.
     *	(Alt+Shift+Ctrl+I).
     *
     *	@desc
     *	@file 		page_3
     *	@date 		Thursday 04th of August 2022 06:30:04 PM
     *	@title 		Page 1
     *	@author
     *	@keywords
     *	@generator 	Export Kit v1.3.figma
     *
     */
    -->
	<ScrollView
		android:id="@+id/page_2"
		android:layout_width="wrap_content"
		android:layout_height="match_parent">

		<androidx.constraintlayout.widget.ConstraintLayout
			android:id="@+id/content_container"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content">


			<View
				android:id="@+id/_bg__page_2_ek2"
				android:layout_width="394dp"
				android:layout_height="787dp"
				android:background="@drawable/_bg__page_2_ek2_shape"
				app:layout_constraintBottom_toBottomOf="parent"
				app:layout_constraintStart_toStartOf="parent"
				app:layout_constraintTop_toTopOf="parent" />

			<!--			bottom rect-->

			<TextView
				android:id="@+id/__slptime"
				android:layout_width="278dp"
				android:layout_height="31.5dp"
				android:layout_gravity="center_horizontal|center"
				android:gravity="center"
				android:text="@string/__slptime_string"
				android:textColor="@color/rectangle_1_color"
				android:textSize="21sp"
				android:textStyle="bold"
				app:layout_constraintBottom_toTopOf="@+id/rectangle_3_ek1"
				app:layout_constraintEnd_toEndOf="parent"
				app:layout_constraintHorizontal_bias="0.495"
				app:layout_constraintStart_toStartOf="parent"
				app:layout_constraintTop_toBottomOf="@+id/rectangle_4_ek1"
				app:layout_constraintVertical_bias="0.555" />

			<View
				android:id="@+id/rectangle_4_ek1"
				android:layout_width="358dp"
				android:layout_height="220dp"
				android:layout_marginTop="76dp"
				android:background="@drawable/rectangle_4_ek1_shape"
				app:layout_constraintEnd_toEndOf="parent"
				app:layout_constraintHorizontal_bias="0.517"
				app:layout_constraintStart_toStartOf="parent"
				app:layout_constraintTop_toTopOf="parent" />

			<TextView
				android:id="@+id/__wakeup"
				android:layout_width="321dp"
				android:layout_height="32dp"
				android:layout_gravity="center_horizontal|center"
				android:gravity="center"
				android:text="@string/__wakeup_string"
				android:textColor="@color/rectangle_1_color"
				android:textSize="21sp"
				android:textStyle="bold"
				app:layout_constraintBottom_toTopOf="@+id/rectangle_4_ek1"
				app:layout_constraintEnd_toEndOf="parent"
				app:layout_constraintStart_toStartOf="parent"
				app:layout_constraintTop_toTopOf="@+id/_bg__page_2_ek2"
				app:layout_constraintVertical_bias="0.903" />


			<View
				android:id="@+id/rectangle_3_ek1"
				android:layout_width="358dp"
				android:layout_height="220dp"
				android:layout_marginTop="368dp"
				android:background="@drawable/rectangle_3_ek1_shape"
				app:layout_constraintEnd_toEndOf="parent"
				app:layout_constraintHorizontal_bias="0.517"
				app:layout_constraintStart_toStartOf="parent"
				app:layout_constraintTop_toTopOf="parent" />

			<TimePicker
				android:id="@+id/fragment_createalarm_timePicker2"
				android:layout_width="257dp"
				android:layout_height="204dp"
				android:layout_weight="0.6"
				android:textSize="21sp"
				android:timePickerMode="spinner"
				app:layout_constraintBottom_toBottomOf="@+id/rectangle_3_ek1"
				app:layout_constraintEnd_toEndOf="@+id/rectangle_3_ek1"
				app:layout_constraintHorizontal_bias="0.861"
				app:layout_constraintStart_toStartOf="@+id/rectangle_3_ek1"
				app:layout_constraintTop_toTopOf="@+id/rectangle_3_ek1" />


			<pl.droidsonroids.gif.GifImageView
				android:id="@+id/__img___page2img1"
				android:layout_width="94dp"
				android:layout_height="93dp"
				android:layout_marginTop="27dp"
				android:contentDescription="@string/img_page2img1"
				android:src="@drawable/__img___page2img1"
				app:layout_constraintBottom_toBottomOf="@+id/rectangle_4_ek1"
				app:layout_constraintEnd_toEndOf="@+id/rectangle_4_ek1"
				app:layout_constraintHorizontal_bias="0.003"
				app:layout_constraintStart_toStartOf="@+id/rectangle_4_ek1"
				app:layout_constraintTop_toTopOf="@+id/rectangle_4_ek1"
				app:layout_constraintVertical_bias="0.18" />

			<TimePicker
				android:id="@+id/fragment_createalarm_timePicker"
				android:layout_width="257dp"
				android:layout_height="204dp"
				android:layout_weight="0.6"
				android:textSize="21sp"
				android:timePickerMode="spinner"
				app:layout_constraintBottom_toBottomOf="@+id/rectangle_4_ek1"
				app:layout_constraintEnd_toEndOf="@+id/rectangle_4_ek1"
				app:layout_constraintHorizontal_bias="0.861"
				app:layout_constraintStart_toStartOf="@+id/rectangle_4_ek1"
				app:layout_constraintTop_toTopOf="@+id/rectangle_4_ek1" />

			<pl.droidsonroids.gif.GifImageView
				android:id="@+id/__img___page2img2"
				android:layout_width="92dp"
				android:layout_height="92dp"
				android:contentDescription="@+id/__img___page2img2"
				android:src="@drawable/__img___page2img2"
				app:layout_constraintBottom_toBottomOf="@+id/rectangle_3_ek1"
				app:layout_constraintEnd_toEndOf="@+id/rectangle_3_ek1"
				app:layout_constraintHorizontal_bias="0.0"
				app:layout_constraintStart_toStartOf="@+id/rectangle_3_ek1"
				app:layout_constraintTop_toTopOf="@+id/rectangle_3_ek1"
				app:layout_constraintVertical_bias="0.504" />

			<Button
				android:id="@+id/button"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:background="@drawable/rectangle_4_ek1_shape"
				android:letterSpacing="0.1"
				android:onClick="onBtnClick"
				android:padding="5dp"
				android:text="@string/btn"
				android:textColor="@color/rectangle_1_color"
				android:textStyle="bold"
				app:layout_constraintBottom_toBottomOf="parent"
				app:layout_constraintEnd_toEndOf="parent"
				app:layout_constraintHorizontal_bias="0.498"
				app:layout_constraintStart_toStartOf="parent"
				app:layout_constraintTop_toBottomOf="@+id/rectangle_3_ek1"
				app:layout_constraintVertical_bias="0.258" />


		</androidx.constraintlayout.widget.ConstraintLayout>

	</ScrollView>
</LinearLayout>